welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: '=' expected but ';' found.
	while (setPos(x,y)=!getPos(getMondeHauteur()-1,getMondeHauteur()-1)) {
^